--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wreck-it Ralph's Website</title> 
     <link rel="icon" href="./img/ralph-icon.jpg">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css?v=1">
 </head>
 <body>
     <!-- Header -->
@@ -18,8 +18,6 @@
     </main>
     
     <!-- Footer -->
-    <footer>
-        
-    </footer>
+    <footer></footer>
 </body>
 </html>
