--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- Header -->
     <header>
+        <img src="./img/ralph-profile.jpg" alt="Wreck-it Ralph's Profile Picture" width="100" height="100">
         <h1>Welcome to Wreck-it Ralph's Website</h1>
     </header>
 
