Back to original

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header -->
     <header>
-       <div class="pfp">
+        <img src="./img/ralph-profile.jpg" alt="Wreck-it Ralph's Profile Picture">
         <h1>Welcome to Wreck-it Ralph's Website</h1>
     </header>
 
