Now using pfp images in css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="pfp">
-        <h1>Welcome to Wreck-it Ralph's Website</h1>
+        <div class="pfp"></div>
+        <h1>Wreck-it Ralph</h1>
     </header>
 
     <!-- Main Content -->
